# scoringutils-py

./: .gitignore  README.md  pyproject.toml
src/scoringutils_py/: __init__.py  core.py
src/scoringutils_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_core.py
