[project]
name = "scoringutils_py"
version = "0.1.0"
description = "A Python package for evaluating and scoring forecasts, inspired by the R package scoringutils."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "scoringrules",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["scoringutils_py"]
package-dir = {"" = "src"}
